# libft

./: CMakeLists.txt  Makefile  ft_abs.c  ft_atoi.c  ft_binary_search.c  ft_calloc.c  ft_free_arr.c  ft_free_str_arr.c  ft_get_lis.c  ft_get_next_line.c  ft_insertion_sort.c  ft_isalpha.c  ft_itoa.c  ft_lis.c  ft_lis_utils.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_max.c  ft_memchr.c  ft_memmove.c  ft_min.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_quicksort.c  ft_s_lstfind_content.c  ft_s_lstfind_position.c  ft_s_lstnew.c  ft_s_lstnode_at.c  ft_selection_sort.c  ft_sl_lstadd_back.c  ft_sl_lstadd_front.c  ft_sl_lstclear.c  (+17 more)
_testing/: main.c
_testing/libft-unit-test/: Makefile  README.md
_testing/libft-unit-test/assets/tmp/: __.SYMDEF
_testing/libft-war-machine/: README.md
_testing/libftTester/: Makefile  README.md
ft_printf/: Makefile  ft_get_spec.c  ft_printf.h
include/: libft.h
srcs/: ft_atoi.c  ft_get_next_line.c
